# perceptron_cpp

./: .gitignore  CMakeLists.txt  LICENCE  LICENSE  NeuralNetwork.cpp  NeuralNetwork.hpp  Neuron.cpp  Neuron.hpp  PerceptronMonoLayer.cpp  PerceptronMonoLayer.hpp  README.md  TODO.txt  build.sh  main.cpp  perceptron  perceptron.kdev4  reader.cpp
src/: main.cpp
src/mnist/: reader.cpp  reader.hpp
src/nn/: NeuralNetwork.cpp  NeuralNetwork.hpp
src/perceptron/: ItemNN.hpp  Neuron.cpp  Neuron.hpp  PerceptronMonoLayer.cpp  PerceptronMonoLayer.hpp  act_funs.hpp
util/: util.cpp  util.h
